fix: home page contact button size on mobile version

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -100,7 +100,7 @@
             float: none;
             display: block;
             margin: 20px auto 0 auto;
-            width: 125px;
+            width: 120px;
         }
 
         .logo-container {
